Fix: correct spacing

--- a/vvs.css
+++ b/vvs.css
@@ -50,7 +50,7 @@ html, body {
 }
 
 .time-span {
-    width: 120px;
+    width: 130px;
     display: inline-block;
 }
 
